[package]
name = "territory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.3"
grid = "0.9.0"
itertools = "0.10.5"
log = "0.4.17"
pixels = "0.10.0"
rand = "0.8.5"
winit = "0.27.5"
winit_input_helper = "0.13.0"
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = { version = "0.19", default-features = false, features = [
	"links",
] }
