[package]
name = "territory"
version = "0.1.0"
edition = "2021"
[lib]
name = "libterritory"
crate-type = ["cdylib", "rlib"]
[dependencies]
env_logger = "0.9.3"
grid = "0.9.0"
itertools = "0.10.5"
log = "0.4.17"
pixels = "0.10.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
winit = "0.27.5"
winit_input_helper = "0.13.0"
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = { version = "0.19", default-features = false, features = [
	"links",
] }

[profile.release]
lto = true
panic = "abort"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wgpu = { version = "0.13", features = ["webgl"] }
wasm-bindgen-futures = "0.4.33"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5.3"
pollster = "0.2"
